--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-Hello World
+<!doctype html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <link rel="stylesheet" href="css/home.css">
+    <title>Iago Mozart</title>
+</head>
+
+<body>
+
+
+
+<ul>
+    <li>
+        <h1>3</h1>
+        <span>Lorem ipsum dolor sit amet!</span>
+        <a href="#"><span>Clique aqui</span></a>
+    </li>
+
+    <li>
+        <h1>2</h1>
+        <span>Lorem ipsum dolor sit amet?</span>
+        <a href="#"><span>Clique aqui</span></a>
+    </li>
+
+    <li>
+        <h1>1</h1>
+        <span>Lorem ipsum dolor sit amet.</span>
+        <a href="#"><span>Clique aqui</span></a>
+    </li>
+</ul>
+
+</body>
+</html>
