implementações de novos recursos - WIP

--- a/contato.html
+++ b/contato.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/menu.css">
-    <title>Iago Mozart</title>
+    <title>Document</title>
 </head>
 <body>
 <div class="menu-wrap">
@@ -21,9 +21,9 @@
             <div>
                 <ul>
                     <li><a href="https://github.com/imozart" target="_blank">Github</a></li>
-                    <!--<li><a href="contato.html">About</a></li>
+                    <li><a href="contato.html">About</a></li>
                     <li><a href="#">Services</a></li>
-                    <li><a href="#">Contact</a></li>-->
+                    <li><a href="#">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -32,9 +32,10 @@
 
 <header class="showcase">
     <div class="container showcase-inner">
-        <h1>Iago Mozart</h1>
-<!--        <p>Desenvolvedor</p>-->
-        <a href="https://github.com/imozart" target="_blank" class="btn">Github</a>
+        <h1>Sobre</h1>
+        <p>contato</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid aperiam sed velit voluptatem? Architecto assumenda at commodi consequatur delectus dolor earum eveniet exercitationem expedita laboriosam molestiae obcaecati quasi repellendus, repudiandae sequi sit ullam vel veritatis voluptas voluptates! A accusantium distinctio ea nemo nobis voluptate. Aspernatur assumenda dolorum ea eligendi exercitationem incidunt laudantium, necessitatibus, quas, ratione soluta temporibus vel vero.</p>
+        <a href="#" class="btn">Read More</a>
     </div>
 </header>
 </body>
