--- a/index.html
+++ b/index.html
@@ -1,41 +1,76 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/menu.css">
+    
     <title>Iago Mozart</title>
 </head>
 <body>
-<div class="menu-wrap">
-    <input type="checkbox" class="toggler">
-    <div class="hamburger">
-        <div></div>
-    </div>
-    <div class="menu">
-        <div>
-            <div>
-                <ul>
-                    <li><a href="https://github.com/imozart" target="_blank">Github</a></li>
-                    <!--<li><a href="contato.html">About</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Contact</a></li>-->
-                </ul>
+    <div class="container">
+        <div class="card">
+            <div class="card-bio">
+                <div class="img-wrapper">
+                    <img src="img/947346.jpg" alt="Person">
+                </div>
+
+                <div class="person-info">
+                    <h3>Iago Mozart</h3>
+                    <p>Nesse vasto universo online, encontrar-me-á você irá.</p>                    
+                    <br>
+                    <p>No GitHub, tentativas de aprendizagem você verá.</p>
+                </div>
+
+                <button class="card-btn">
+                    <span class="card-btn-contact">Contate-me</span>
+                    <i class="fas fa-angle-up"></i>
+                </button>
             </div>
+
+            <div class="card-contact">
+                <h4>Contate-me</h4>
+            </div>
+
+            <div class="card-social email" data-tilt>
+                <div class="icon-wrapper">
+                    <i class="fas fa-envelope fa-2x"></i>
+                </div>
+                <div class="contact-details">
+                    <h4>E-mail</h4>
+                    <p>
+                        <a href="mailto:mozart.iago@gmail.com">mozart.iago@gmail.com</a>
+                    </p>                    
+                </div>
+            </div>
+            
+            <div class="card-social linkedin">
+                <div class="icon-wrapper">
+                    <i class="fab fa-linkedin fa-2x"></i>
+                </div>
+                <div class="contact-details">
+                    <h4>LinkedIn</h4>
+                    <p>
+                        <a href="https://www.linkedin.com/in/iago-mozart" target="_blank">Iago Mozart</a>
+                    </p>                    
+                </div>
+            </div>
+
+            <div class="card-social github">
+                <div class="icon-wrapper">
+                    <i class="fab fa-github fa-2x"></i>
+                </div>
+                <div class="contact-details">
+                    <h4>LinkedIn</h4>
+                    <p>
+                        <a href="https://github.com/imozart" target="_blank">imozart</a>
+                    </p>                    
+                </div>
+            </div>            
         </div>
     </div>
-</div>
-
-<header class="showcase">
-    <div class="container showcase-inner">
-        <h1>Iago Mozart</h1>
-<!--        <p>Desenvolvedor</p>-->
-        <a href="https://github.com/imozart" target="_blank" class="btn">Github</a>
-    </div>
-</header>
+    <script src="js/script.js"></script>    
 </body>
 </html>
